--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -1,9 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
+}
+
+.wrapper {
+  overflow: hidden;
+}
+
+.background-dimmer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  background-color: $color1;
+  opacity: 0.7;
+  visibility: hidden;
 }
