--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1,9 +1,14 @@
 .container {
-  max-width: 1550px;
+  max-width: $container-xxlg;
   margin: 0 auto;
 }
 
 .container-inner {
-  max-width: 1300px;
+  max-width: $container-xlg;
+  margin: 0 auto;
+}
+
+.container-banner {
+  max-width: 1920px;
   margin: 0 auto;
 }
